deployment/ingress/configs/ingress-keycloak.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: auth
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: auth.erag.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
      - auth.erag.com
      secretName: tls-secret
